# hermys-api

./: .gitignore  pyproject.toml
hermys/: main.py  settings.py
hermys/common/: abstract_service.py  b2_helpers.py  host_name_dependencies.py
hermys/db/: base.py  config.py  db.py  host_db.py  shared_db.py
hermys/integrations/b2/: dependencies.py  integration.py  service.py
hermys/integrations/pinecone/: dependencies.py  integration.py
hermys/integrations/scount_apm/: config.py
hermys/integrations/sentry/: config.py
hermys/lib/rag/: service.py
hermys/modules/audit/: enums.py  exceptions.py  repository.py  schemas.py
hermys/modules/audit/services/: __init__.py  create_audit.py
hermys/modules/auth/: dependencies.py  exceptions.py  jwt.py  password.py  permissions.py  routes.py  schemas.py  service.py
hermys/modules/clerk/: dependencies.py  enums.py  exceptions.py  repository.py  routes.py  schemas.py  service.py
hermys/modules/clerk/services/: create_clerk.py
hermys/modules/helpers/: routes.py
hermys/modules/knowledge/: dependencies.py  exceptions.py  host_routes.py  respository.py  routes.py  schemas.py  service.py
hermys/modules/knowledge/services/: __init__.py  add_photo.py  train_knowledge.py
hermys/modules/organization/: dependencies.py  exceptions.py  repository.py  routes.py  schemas.py  service.py
hermys/modules/suggestions/: dependencies.py  exceptions.py  repository.py  routes.py  schemas.py
hermys/modules/suggestions/services/: __init__.py  create_suggestion.py  list_suggestions.py
hermys/modules/user/: dependencies.py  enums.py  exceptions.py  repository.py  routes.py  schemas.py  service.py
tests/: conftest.py
tests/common/: test_b2_helpers.py  test_host_name_dependencies.py
tests/db/: test_base.py
tests/modules/auth/jwt/: test_create_token.py  test_decode_token.py
tests/modules/auth/password/: test_get_hashed_password.py  test_is_password_strong.py  test_verify_password.py
tests/modules/auth/routes/: test_route.py
tests/modules/auth/service/: test_get_current_user.py  test_get_token.py
tests/modules/clerk/repository/: test_clerk_existis.py  test_create_clerk.py  test_get_clerk.py  test_get_or_rise_clerk.py
tests/modules/clerk/routes/: test_create_clerk.py
tests/modules/clerk/services/: test_create_clerk.py
tests/modules/user/repository/: test_create.py  test_get.py  (+2 more)
(+5 files in other folders)
